bk_ida/gccida/g0/dump_regclass
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regclass/src/regclass.c:1413:68: error: use of undeclared identifier 'costs_0'
fprintf( dump, " %s:%i", reg_class_names_1[classa], ( unsigned int)costs_0[i].cost[classa]); 
                                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regclass/src/regclass.c:1413:26: error: use of undeclared identifier 'reg_class_names_1'; did you mean 'reg_class_size'?
fprintf( dump, " %s:%i", reg_class_names_1[classa], ( unsigned int)costs_0[i].cost[classa]); 
                         ^~~~~~~~~~~~~~~~~
                         reg_class_size
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regclass/src/regclass.c:163:14: note: 'reg_class_size' declared here
unsigned int reg_class_size[N_REG_CLASSES];
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regclass/src/regclass.c:1415:44: error: use of undeclared identifier 'costs_0'
fprintf( dump, " MEM:%i\n", ( unsigned int)costs_0[i].mem_cost); 
                                           ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_regclass/src/obj/regclass.o] Error 1
